style.css
* {
  font-family: 'Fira Sans', sans-serif;
  color:rgb(44, 44, 44)
}

body {
  font-size: 13px;
  width: 270px;
  height: 150px;
  margin: 0;  
}

a {
  color: #98BE50
}

h2 {
  font-weight: 500;  
  margin: 0px 0 15px 0;
}

h3 {
  margin: 0;
}

header {
  background-color: #f1f7e7;
  padding: 10px 10px 5px 10px;
  margin: 0;  
  border: 1px solid rgb(235, 236, 230);
}

button {
  font-weight: bold;
	background: none;
	background-color: rgb(152, 190, 81);
	border: none;
	padding: 10px;
	outline: inherit;
  border-radius: 8px;
}

p {
  font-weight: 300; 
}

#main {
  padding: 20px;
}

#settingsArea, #statsArea, #infoArea {
  display: none;
}

.settingsLabel {
  display: inline;
  margin-right: 2px;
  padding: 2px 6px 2px 6px;
  border-radius: 6px;
  font-size: 12px;
  font-weight: 400;
}

.playPauseArea{
  /* white-space: nowrap; * force the elements to stay side by side * */
}

.pauseDescriptionText{
  display: inline-block;
  /* display: inline;
  white-space: normal;
  vertical-align: middle */
}

.playPauseImage {
  display: inline-block;
  vertical-align: top;
  width: 35px;
  margin: 5px 10px 20px 0;
}

#settingsSpacer{
  height: 25px;
}

.timeUnitInactive {
  color: rgb(179, 184, 160);
  background-color: #fff;
}

.timeUnitActive {
  color: black;
  background-color: rgb(152, 190, 81);
}

.settingsValue {
  display: inline;
  font-size: 14px;
  font-weight: 400;
  margin: 0 5px 0 7px;
}

.slider {
  display: block;
}


.logo {
  width: 130px;
  display: inline;
  margin: auto;
}

.navIcons{
  float: right;
  margin: 2px 2px 0 0;
}

.icon{
  height: 20px;
  margin-left: 5px;
  margin-bottom: 5px;
}

#toggleOutput {
  display: flex;
  justify-content: center;
  align-items: center;
}

#lookToggle {
  background-color: green; 

	border: none;
  border-radius: 20%;
	padding: 0;
}


/*start input styling */
input[type=range] {
  height: 23px;
  -webkit-appearance: none;
  margin: 3px 0 1px 0;
  width: 100%;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 5px;
  cursor: pointer;
  animate: 0.2s;
  /* box-shadow: 1px 1px 1px #ABABAB;  */

  background: #98BE50;
  border-radius: 5px;
  border: none;
  /* border: 1px solid #ABABAB; */
}
input[type=range]::-webkit-slider-thumb {
  /* box-shadow: 1px 1px 1px #8C8C8C; */
  border: 2.5px solid #98BE50;
  height: 15px;
  width: 15px;
  border-radius: 10px;
  background: #FFFFFF;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -6px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #98BE50;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 5px;
  cursor: pointer;
  animate: 0.2s;
  /* box-shadow: 1px 1px 1px #ABABAB; */
  background: #98BE50;
  border-radius: 5px;
  border: none;
  /* border: 1px solid #ABABAB; */
}
input[type=range]::-moz-range-thumb {
  /* box-shadow: 1px 1px 1px #8C8C8C; */
  border: 2.5px solid #98BE50;
  height: 15px;
  width: 15px;
  border-radius: 10px;
  background: #FFFFFF;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 5px;
  cursor: pointer;
  animate: 0.2s;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #98BE50;
  /* border: 1px solid #ABABAB; */
  border-radius: 10px;
  /* box-shadow: 1px 1px 1px #ABABAB; */
}
input[type=range]::-ms-fill-upper {
  background: #98BE50;
  /* border: 1px solid #ABABAB; */
  border-radius: 10px;
  /* box-shadow: 1px 1px 1px #ABABAB; */
}
input[type=range]::-ms-thumb {
  margin-top: 1px;
  /* box-shadow: 1px 1px 1px #8C8C8C; */
  border: 2.5px solid #98BE50;
  height: 15px;
  width: 15px;
  border-radius: 10px;
  background: #FFFFFF;
  cursor: pointer;
}
input[type=range]:focus::-ms-fill-lower {
  background: #98BE50;
}
input[type=range]:focus::-ms-fill-upper {
  background: #98BE50;
}
/*end input styling */

